update log and control.sh